@@ -1,5 +1,9 @@
 2004-03-31  Mason Kidd  <mrkidd@mrkidd.com>
 
+	* src/gap-metadata.c, src/gap-metadata.h, src/GAPPlayer.c: Add GstTag support (yea!)
+
+2004-03-31  Mason Kidd  <mrkidd@mrkidd.com>
+
 	* open-location.glade, src/gui-callbacks.c: Use the full dialog from the glade file
 	instead of creating one.
 
